--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.17.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
